# GO2_nav

./: .gitignore  .mcp.json  AGENTS.md  NAVIGATION_PARAMETERS.md  NAVIGATION_RESEARCH.md  README.md  go2_pct_integration_guide.html  kill_all_ros2.sh  ros2_topic_逐项echo推测报告.md  机器狗摄像头ROS2桥接简记.md
.claude/: settings.json
output/: go2_built_map.pcd  go2_named_poses.json
src/bspline_opt/: CMakeLists.txt  package.xml
src/ego_planner/: CMakeLists.txt  package.xml
src/ego_planner/include/ego_planner/: ego_replan_fsm.h
src/ego_planner/src/: ego_replan_fsm.cpp  go2_traj_server.cpp  planner_manager.cpp
src/go2_camera_bridge/: package.xml  setup.cfg  setup.py
src/go2_camera_bridge/config/: go2_camera_bridge.yaml
src/go2_camera_bridge/go2_camera_bridge/: front_camera_bridge.py
src/go2_camera_bridge/launch/: front_camera_bridge.launch.py
src/go2_camera_bridge/resource/: go2_camera_bridge
src/go2_mapping_minimal/: CMakeLists.txt  package.xml
src/go2_mapping_minimal/launch/: mapping_go2_builtin.launch.py
src/go2_mapping_minimal/rviz_cfg/: go2_builtin.rviz
src/go2_mapping_minimal/src/: go2_map_builder.cpp
src/go2_navigation/: package.xml  setup.py
src/go2_navigation/config/: go2_navigation.yaml
src/go2_navigation/go2_navigation/: __init__.py  dynamic_obstacle_filter.py  gait_init_node.py  height_map_viz.py  named_goal_gui.py  named_pose_gui.py  navigation_mcp_server.py  pcd_map_publisher.py  publish_cmd_vel.py  publish_goal.py  simple_goal_controller.py  unitree_api_helpers.py  unitree_sport_bridge.py
src/go2_navigation/launch/: click_goal_nav.launch.py  height_map_viz.launch.py  simple_goal_nav.launch.py
src/go2_navigation/rviz_cfg/: click_goal_nav.rviz
src/go2_navigation/test/: test_height_map_viz.py
src/path_searching/: CMakeLists.txt  package.xml
src/plan_env/: CMakeLists.txt  package.xml
src/plan_env/include/plan_env/: grid_map.h
src/plan_env/src/: grid_map.cpp
src/traj_utils/include/traj_utils/: planning_visualization.h
src/traj_utils/src/: planning_visualization.cpp
