<?xml version="1.0"?>
<package format="3">
  <name>go2_mapping_minimal</name>
  <version>0.1.0</version>
  <description>Minimal ROS2 package for building a map from Unitree Go2 built-in odometry and deskewed lidar cloud.</description>

  <maintainer email="huang@example.com">huang</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>go2_navigation</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
