<?xml version="1.0"?>
<package format="3">
  <name>go2_navigation</name>
  <version>0.1.0</version>
  <description>Goal-point navigation helpers for Unitree Go2 based on ROS 2 topics and the Unitree Sport API.</description>

  <maintainer email="huang@example.com">huang</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unitree_api</exec_depend>
  <exec_depend>unitree_go</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
